Updating repo with new ideas